{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 5896,
  "lineage": "11951302-3798-b133-178a-a4fc37c1ff21",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:926562225508:vpc/vpc-0781bddf9be5ff4ba",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07d8fb270fb733af4",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-06e5defa39757ceca",
                "cidr_block": "100.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-08c5f1e5833c4883d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "hub"
                ]
              }
            ],
            "id": "vpc-0781bddf9be5ff4ba",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a4e566c619d86cc5",
            "owner_id": "926562225508",
            "tags": {
              "Environment": "hub",
              "Name": "hub"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "85999",
                "uid": "62fcaa5b-e03a-4082-9832-bbc5b2e83dae"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_subnets.intra_subnets",
            "data.aws_vpc.vpc",
            "module.argocd_irsa.aws_iam_role.this",
            "module.argocd_irsa.data.aws_caller_identity.current",
            "module.argocd_irsa.data.aws_iam_policy_document.this",
            "module.argocd_irsa.data.aws_partition.current",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_access_entry.this",
            "module.eks.aws_eks_access_policy_association.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.data.tls_certificate.this",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks_blueprints_addons.aws_autoscaling_group_tag.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_autoscaling_lifecycle_hook.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_cloudwatch_event_rule.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_cloudwatch_event_rule.karpenter",
            "module.eks_blueprints_addons.aws_cloudwatch_event_target.aws_node_termination_handler",
            "module.eks_blueprints_addons.aws_cloudwatch_event_target.karpenter",
            "module.eks_blueprints_addons.aws_cloudwatch_log_group.aws_for_fluentbit",
            "module.eks_blueprints_addons.aws_cloudwatch_log_group.fargate_fluentbit",
            "module.eks_blueprints_addons.aws_eks_addon.this",
            "module.eks_blueprints_addons.aws_iam_instance_profile.karpenter",
            "module.eks_blueprints_addons.aws_iam_policy.fargate_fluentbit",
            "module.eks_blueprints_addons.aws_iam_role.karpenter",
            "module.eks_blueprints_addons.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.aws_iam_role_policy_attachment.karpenter",
            "module.eks_blueprints_addons.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.data.aws_eks_addon_version.this",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_efs_csi_driver",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_for_fluentbit",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_fsx_csi_driver",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_gateway_api_controller",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_load_balancer_controller",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_node_termination_handler",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.aws_privateca_issuer",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.cert_manager",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.cluster_autoscaler",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.external_dns",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.external_secrets",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.fargate_fluentbit",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.karpenter",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.karpenter_assume_role",
            "module.eks_blueprints_addons.data.aws_iam_policy_document.velero",
            "module.eks_blueprints_addons.data.aws_partition.current",
            "module.eks_blueprints_addons.data.aws_region.current",
            "module.eks_blueprints_addons.helm_release.this",
            "module.eks_blueprints_addons.kubernetes_config_map_v1.aws_logging",
            "module.eks_blueprints_addons.kubernetes_config_map_v1_data.aws_for_fluentbit_containerinsights",
            "module.eks_blueprints_addons.kubernetes_namespace_v1.aws_observability",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argo_events.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argo_events.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argo_events.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argo_events.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argo_events.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argo_events.helm_release.this",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argo_rollouts.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argo_rollouts.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argo_rollouts.helm_release.this",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argo_workflows.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argo_workflows.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argo_workflows.helm_release.this",
            "module.eks_blueprints_addons.module.argocd.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.argocd.aws_iam_role.this",
            "module.eks_blueprints_addons.module.argocd.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.argocd.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.argocd.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.argocd.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.argocd.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.argocd.data.aws_partition.current",
            "module.eks_blueprints_addons.module.argocd.helm_release.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_cloudwatch_metrics.helm_release.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_efs_csi_driver.helm_release.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_for_fluentbit.helm_release.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_fsx_csi_driver.helm_release.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_gateway_api_controller.helm_release.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_load_balancer_controller.helm_release.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_node_termination_handler.helm_release.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_policy.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_allow_policy.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_allow_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_policy.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.aws_sqs_queue_redrive_policy.this",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.data.aws_iam_policy_document.dlq",
            "module.eks_blueprints_addons.module.aws_node_termination_handler_sqs.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_role.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.data.aws_partition.current",
            "module.eks_blueprints_addons.module.aws_privateca_issuer.helm_release.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_role.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.data.aws_partition.current",
            "module.eks_blueprints_addons.module.bottlerocket_shadow.helm_release.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_role.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.data.aws_partition.current",
            "module.eks_blueprints_addons.module.bottlerocket_update_operator.helm_release.this",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_role.this",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.cert_manager.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.cert_manager.data.aws_partition.current",
            "module.eks_blueprints_addons.module.cert_manager.helm_release.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_role.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.cluster_autoscaler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.cluster_autoscaler.data.aws_partition.current",
            "module.eks_blueprints_addons.module.cluster_autoscaler.helm_release.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_role.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.data.aws_partition.current",
            "module.eks_blueprints_addons.module.cluster_proportional_autoscaler.helm_release.this",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_role.this",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.external_dns.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.external_dns.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.external_dns.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.external_dns.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.external_dns.data.aws_partition.current",
            "module.eks_blueprints_addons.module.external_dns.helm_release.this",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_role.this",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.external_secrets.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.external_secrets.data.aws_partition.current",
            "module.eks_blueprints_addons.module.external_secrets.helm_release.this",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_role.this",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.gatekeeper.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.gatekeeper.data.aws_partition.current",
            "module.eks_blueprints_addons.module.gatekeeper.helm_release.this",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_role.this",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.ingress_nginx.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.ingress_nginx.data.aws_partition.current",
            "module.eks_blueprints_addons.module.ingress_nginx.helm_release.this",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_role.this",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.karpenter.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.karpenter.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.karpenter.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.karpenter.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.karpenter.data.aws_partition.current",
            "module.eks_blueprints_addons.module.karpenter.helm_release.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_policy.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_policy.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_allow_policy.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_allow_policy.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_policy.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.aws_sqs_queue_redrive_policy.this",
            "module.eks_blueprints_addons.module.karpenter_sqs.data.aws_iam_policy_document.dlq",
            "module.eks_blueprints_addons.module.karpenter_sqs.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_role.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.data.aws_partition.current",
            "module.eks_blueprints_addons.module.kube_prometheus_stack.helm_release.this",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_role.this",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.metrics_server.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.metrics_server.data.aws_partition.current",
            "module.eks_blueprints_addons.module.metrics_server.helm_release.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_role.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.data.aws_partition.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver.helm_release.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_role.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.data.aws_partition.current",
            "module.eks_blueprints_addons.module.secrets_store_csi_driver_provider_aws.helm_release.this",
            "module.eks_blueprints_addons.module.velero.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.velero.aws_iam_role.this",
            "module.eks_blueprints_addons.module.velero.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.velero.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.velero.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.velero.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.velero.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.velero.data.aws_partition.current",
            "module.eks_blueprints_addons.module.velero.helm_release.this",
            "module.eks_blueprints_addons.module.vpa.aws_iam_policy.this",
            "module.eks_blueprints_addons.module.vpa.aws_iam_role.this",
            "module.eks_blueprints_addons.module.vpa.aws_iam_role_policy_attachment.additional",
            "module.eks_blueprints_addons.module.vpa.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints_addons.module.vpa.data.aws_caller_identity.current",
            "module.eks_blueprints_addons.module.vpa.data.aws_iam_policy_document.assume",
            "module.eks_blueprints_addons.module.vpa.data.aws_iam_policy_document.this",
            "module.eks_blueprints_addons.module.vpa.data.aws_partition.current",
            "module.eks_blueprints_addons.module.vpa.helm_release.this",
            "module.eks_blueprints_addons.time_sleep.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:926562225508:security-group/sg-001b540b4ff4178a6",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-001b540b4ff4178a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Access EKS from VPC.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0186cf33584e97932"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "hub-cluster-20240615134400030100000004",
            "name_prefix": "hub-cluster-",
            "owner_id": "926562225508",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hub-cluster"
            },
            "tags_all": {
              "Name": "hub-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0781bddf9be5ff4ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:926562225508:security-group/sg-0186cf33584e97932",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0186cf33584e97932",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001b540b4ff4178a6"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001b540b4ff4178a6"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001b540b4ff4178a6"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001b540b4ff4178a6"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001b540b4ff4178a6"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001b540b4ff4178a6"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "elbv2.k8s.aws/targetGroupBinding=shared",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041c51416cc8c62b8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hub-node-20240615134400231500000005",
            "name_prefix": "hub-node-",
            "owner_id": "926562225508",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hub-node",
              "kubernetes.io/cluster/hub": "owned"
            },
            "tags_all": {
              "Name": "hub-node",
              "kubernetes.io/cluster/hub": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0781bddf9be5ff4ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cluster_internal_ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Access EKS from VPC.",
            "from_port": 443,
            "id": "sgrule-1056522655",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-001b540b4ff4178a6",
            "security_group_rule_id": "sgr-064e34beaf9c8fec0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-269804645",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-001b540b4ff4178a6",
            "security_group_rule_id": "sgr-0352612061fc0405f",
            "self": false,
            "source_security_group_id": "sg-0186cf33584e97932",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-198075954",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0186cf33584e97932",
            "security_group_rule_id": "sgr-0b02fc68f1553c292",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1591649190",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0186cf33584e97932",
            "security_group_rule_id": "sgr-0bd773493a0eaba06",
            "self": false,
            "source_security_group_id": "sg-001b540b4ff4178a6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3248642060",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0186cf33584e97932",
            "security_group_rule_id": "sgr-0d35c3adc0646eca6",
            "self": false,
            "source_security_group_id": "sg-001b540b4ff4178a6",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-148914074",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0186cf33584e97932",
            "security_group_rule_id": "sgr-0aa963144766ea048",
            "self": false,
            "source_security_group_id": "sg-001b540b4ff4178a6",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-465306555",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0186cf33584e97932",
            "security_group_rule_id": "sgr-064d8b1f6c0321d80",
            "self": false,
            "source_security_group_id": "sg-001b540b4ff4178a6",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2132619376",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0186cf33584e97932",
            "security_group_rule_id": "sgr-0eb63f389efdccfbd",
            "self": false,
            "source_security_group_id": "sg-001b540b4ff4178a6",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-71528201",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0186cf33584e97932",
            "security_group_rule_id": "sgr-03ee8398e0e08863b",
            "self": false,
            "source_security_group_id": "sg-001b540b4ff4178a6",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1297392296",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0186cf33584e97932",
            "security_group_rule_id": "sgr-03de98709ac7589d7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4251439779",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0186cf33584e97932",
            "security_group_rule_id": "sgr-08324bf98c9128b56",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1496871244",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0186cf33584e97932",
            "security_group_rule_id": "sgr-0946f30c00dfb227f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}